[project]
license = {file = "LICENSE"}
name = "line-py"

[tool.poetry]
authors = ["seriaati <seria.ati@gmail.com>"]
description = "Async API wrapper for LINE Messaging API written in Python."
license = "GPL-3.0"
name = "line-py"
packages = [{include = "line"}]
readme = "README.md"
version = "0.8.18"

[tool.poetry.dependencies]
line-bot-sdk = "^3.5.1"
python = "^3.11"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F403"]
