[project]
name = "line-messaging-api"
version = "0.8.19"
description = "非阻塞式 LINE Messaging API 封裝"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "line-bot-sdk>=3.13.0",
    "python-dotenv>=1.0.1",
]
license = { file = "LICENSE" }
authors = [{ "name" = "seriaati", "email" = "seria.ati@gmail.com" }]

[project.urls]
Homepage = "https://github.com/seriaati/line-py"
Repository = "https://github.com/seriaati/line-py.git"
Issues = "https://github.com/seriaati/line-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["line"]

[tool.pyright]
typeCheckingMode = "standard"
