[project]
name = "line-messaging-api"
version = "0.9.0"
description = "非阻塞式 LINE Messaging API 封裝"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "line-bot-sdk>=3.13.0",
    "python-dotenv>=1.0.1",
]
license = { file = "LICENSE" }
authors = [{ "name" = "seriaati", "email" = "seria.ati@gmail.com" }]

[project.urls]
Homepage = "https://github.com/seriaati/line.py"
Repository = "https://github.com/seriaati/line.py.git"
Issues = "https://github.com/seriaati/line.py/issues"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "line"

[tool.pyright]
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"
